# deepLearning-kitchen

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: run_semantic_kitchen.sh  setup_ollama.sh
semantic_kitchen/: __init__.py  __main__.py  kernel_app.py
