[project]
name = "deeplearning-kitchen"
version = "0.1.0"
description = "Semantic Kernel playground (local Ollama)"
requires-python = ">=3.10"
dependencies = [
    "semantic-kernel[ollama]>=1.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semantic_kitchen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
